[package]
edition = "2021"
name = "node-screenshots"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16", default-features = false, features = ["napi4"] }
napi-derive = "2.16"
xcap = "0.0.13"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
