[package]
edition = "2021"
name = "node-screenshots"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
xcap = { version = "0.5.0", features = ["image"] }

[build-dependencies]
napi-build = "2.1.6"

[profile.release]
lto = true
strip = "symbols"
